# libgripper

./: .clang-format  .gitignore  README.md
examples/: CMakeLists.txt  test_bhand.cpp  test_bhand_keyboard.cpp
gripper_ros/: CMakeLists.txt  README.md  compile_commands.json  package.xml
gripper_ros/launch/: bhand.launch  gecko.launch  magnum_opus.launch  robotiq.launch
gripper_ros/src/: bhand_node.cpp  gecko_node.cpp  magnum_opus_node.cpp  robotiq_node.cpp
gripper_ros_common/: CMakeLists.txt  README.md  gripper_ros_common  package.xml
include/gripper/barrett/: barrett_error.h  barrett_hand.h  barrett_hand_driver.h  constants.h  low_pass_filter.h  position_controller.h  velocity_controller.h
libgripper/: CMakeLists.txt
libgripper/cmake/: gripper-config.cmake.in
libgripper/config/: gecko_gripper.yaml  magnum_gripper.yaml
libgripper/examples/: CMakeLists.txt  static_friction_estimate.cpp  test_bhand.cpp  test_driver.cpp  test_gecko_gripper.cpp  test_magnum_gripper.cpp  viscous_friction_estimate.cpp
libgripper/include/gripper/: utils.h
libgripper/include/gripper/barrett/: barrett_hand.h  barrett_hand_driver.h  constants.h  low_pass_filter.h  position_controller.h  utils.h  velocity_controller.h
libgripper/include/gripper/gecko/: gecko_gripper.h  gecko_gripper_config.h  gecko_gripper_driver.h  gecko_types.h
libgripper/include/gripper/magnum_opus/: magnum_gripper.h  magnum_gripper_config.h  magnum_gripper_driver.h  magnum_types.h
libgripper/include/gripper/robotiq/: modbus_client.h  register_map.h  robotiq_gripper.h
libgripper/src/: CMakeLists.txt  utils.cpp
libgripper/src/barrett/: barrett_hand.cpp  barrett_hand_driver.cpp  task_worker.h  velocity_controller.cpp
libgripper/src/communication/: serial_communicator.cpp  serial_communicator.h
libgripper/src/gecko/: gecko_gripper.cpp  gecko_gripper_driver.cpp
libgripper/src/magnum_opus/: magnum_gripper.cpp  magnum_gripper_driver.cpp
libgripper/src/robotiq/: modbus_client.cpp  robotiq_gripper.cpp
scripts/: bridge_serial.sh
src/: CMakeLists.txt
src/barrett/: barrett_hand.cpp  barrett_hand_driver.cpp  position_controller.cpp  velocity_controller.cpp
src/communication/: serial_communicator.cpp
